components/policies-rd/base/konflux-rbac/restrict-binding-serviceaccounts/update/restrict-binding-serviceaccounts-update-validatingadmissionpolicy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-bindings-serviceaccounts-update.konflux-ci.dev
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["rbac.authorization.k8s.io"]
      apiVersions: ["v1"]
      operations: ["UPDATE"]
      resources: ["rolebindings"]
      scope: "Namespaced"
  variables:
  - name: restrictedServiceAccountsPrefix
    expression: "'konflux-bot-'"
  - name: allowedClusterRoleNamePattern
    expression: "'^konflux-.+-bot-actions$'"
  - name: usesForbiddenRoleRef
    expression: |
      has(object.roleRef) && (
        object.roleRef.kind == 'Role' ||
        (object.roleRef.kind == 'ClusterRole' &&
          has(object.roleRef.name) &&
          !object.roleRef.name.matches(variables.allowedClusterRoleNamePattern)))
  - name: addsRestrictedKonfluxBotServiceAccount
    expression: |
      has(object.subjects) &&
      object.subjects.exists(newSubject,
        newSubject.kind == 'ServiceAccount' &&
        (!has(newSubject.apiGroup) || newSubject.apiGroup == '') &&
        has(newSubject.name) &&
        newSubject.name.startsWith(variables.restrictedServiceAccountsPrefix) &&
        (
          !has(oldObject.subjects) ||
          !oldObject.subjects.exists(oldSubject,
            oldSubject.kind == newSubject.kind &&
            ((!has(oldSubject.apiGroup) || oldSubject.apiGroup == '') ==
              (!has(newSubject.apiGroup) || newSubject.apiGroup == '')) &&
            oldSubject.name == newSubject.name &&
            (has(oldSubject.namespace) ? oldSubject.namespace : '') ==
            (has(newSubject.namespace) ? newSubject.namespace : ''))))
  validations:
  - expression: '!variables.usesForbiddenRoleRef || !variables.addsRestrictedKonfluxBotServiceAccount'
    reason: Invalid
    messageExpression: |
      "ServiceAccounts with prefix '" +
      variables.restrictedServiceAccountsPrefix +
      "' cannot be added to an existing RoleBinding" +
      "not referencing a 'konflux-*-bot-actions'."
    message: >-
      ServiceAccounts with prefix 'konflux-bot-' cannot be added to an existing RoleBinding
      not referencing a 'konflux-*-bot-actions' ClusterRole.
