components/policies-rd/base/konflux-rbac/restrict-binding-serviceaccounts/update/restrict-binding-serviceaccounts-update-validatingadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-bindings-serviceaccounts-update.konflux-ci.dev
spec:
  policyName: restrict-bindings-serviceaccounts-update.konflux-ci.dev
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
